--- a/templates/page1.html
+++ b/templates/page1.html
@@ -63,9 +63,10 @@
     <img src="/static/images/top_2.png" alt="Редкие" class="button-image">
 </a>
 
-<a href="/upgrade" class="open-up-button">
+<a href="/fons" class="open-up-button">
     <img src="/static/images/bomb.png" alt="Редкие" class="button-image_up">
 </a>
+
 
 
 <script src="{{ url_for('static', filename='script_wheel.js') }}"></script>
