--- a/templates/page3.html
+++ b/templates/page3.html
@@ -16,8 +16,8 @@
     <a href="/page6" class="item">
         <button class="menu-button">Герои</button>
     </a>
-    <a href="/page7" class="item">
-        <button class="menu-button">Фоны</button>
+    <a href="/upgrade" class="item">
+        <button class="menu-button">Улучшения</button>
     </a>
 </div>
 
