--- a/templates/page6.html
+++ b/templates/page6.html
@@ -39,55 +39,47 @@
     <a href="/page6" class="item">
         <button class="menu-button">Герои</button>
     </a>
-    <a href="/page7" class="item">
-        <button class="menu-button">Фоны</button>
+    <a href="/upgrade" class="item">
+        <button class="menu-button">Улучшения</button>
     </a>
 </div>
 
 
+<div class="character-preview">
 <div class="preview" id="preview">
-    <img src="/static/images/croco.png" alt="Preview">
-    <p id="preview-name">Character 1</p>
-  </div>
+  <img src="/static/images/croco.png" alt="Preview">
+  <p id="preview-name">Character 1</p>
+  <p id="character-description">Description of Character 1</p>
+</div>
+
 <div class="menu_char">
-  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png">
+  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png" data-description="This is Croco, a brave explorer!">
     <img src="/static/images/croco.png" alt="Character 1">
     <p>Character 1</p>
   </div>
-  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png">
+  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png" data-description="Meet Cot, a clever strategist.">
     <img src="/static/images/cot.png" alt="Character 2">
     <p>Character 2</p>
   </div>
-  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png">
+  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png" data-description="Groot is a strong and silent protector.">
     <img src="/static/images/groot.png" alt="Character 3">
     <p>Character 3</p>
   </div>
-  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png">
+  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png" data-description="Golem is made of stone but has a heart of gold.">
     <img src="/static/images/golem.png" alt="Character 4">
     <p>Character 4</p>
   </div>
-  <div class="character" data-id="5" data-name="Character 5" data-img="/static/images/fire.png">
+  <div class="character" data-id="5" data-name="Character 5" data-img="/static/images/fire.png" data-description="Fire is a blazing warrior full of passion.">
     <img src="/static/images/fire.png" alt="Character 5">
     <p>Character 5</p>
   </div>
-  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png">
+  <div class="character" data-id="6" data-name="Character 6" data-img="/static/images/water.png" data-description="Water is calm and adaptable, flowing through challenges.">
     <img src="/static/images/water.png" alt="Character 6">
     <p>Character 6</p>
   </div>
-  <div class="character" data-id="7" data-name="Character 7" data-img="https://via.placeholder.com/200">
-    <img src="https://via.placeholder.com/80" alt="Character 7">
-    <p>Character 7</p>
-  </div>
-  <div class="character" data-id="8" data-name="Character 8" data-img="https://via.placeholder.com/200">
-    <img src="https://via.placeholder.com/80" alt="Character 8">
-    <p>Character 8</p>
-  </div>
-  <div class="character" data-id="9" data-name="Character 9" data-img="https://via.placeholder.com/200">
-    <img src="https://via.placeholder.com/80" alt="Character 9">
-    <p>Character 9</p>
-  </div>
 </div>
 <button id="select-button">Выбрать</button>
+
 
 
 <div class="menu_rare">
