--- a/templates/page6.html
+++ b/templates/page6.html
@@ -53,19 +53,19 @@
 </div>
 
 <div class="menu_char">
-  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png" data-description="This is Croco, a brave explorer!">
+  <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png" data-description="Каждый приглашенный друг дает +1000 монет">
     <img src="/static/images/croco.png" alt="Character 1">
     <p>Character 1</p>
   </div>
-  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png" data-description="Meet Cot, a clever strategist.">
+  <div class="character" data-id="2" data-name="Character 2" data-img="/static/images/cot.png" data-description="Кот играет на гитаре, удваивая количество получаемых монет на 5 мин">
     <img src="/static/images/cot.png" alt="Character 2">
     <p>Character 2</p>
   </div>
-  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png" data-description="Groot is a strong and silent protector.">
+  <div class="character" data-id="3" data-name="Character 3" data-img="/static/images/groot.png" data-description="Восстанавливает энергию на 10% быстрее">
     <img src="/static/images/groot.png" alt="Character 3">
     <p>Character 3</p>
   </div>
-  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png" data-description="Golem is made of stone but has a heart of gold.">
+  <div class="character" data-id="4" data-name="Character 4" data-img="/static/images/golem.png" data-description="Голем Базя позволяет крутить рулетку 2 раза">
     <img src="/static/images/golem.png" alt="Character 4">
     <p>Character 4</p>
   </div>
