--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -42,11 +42,11 @@
     </div>
 </div>
 
-<div class = 'quests_text'>
+<div class = 'up_text'>
 <p>Первый мир</p>
 </div>
 
-<div class="box_1" id="box1">
+<div class="up_1" id="up1">
     <img src="/static/images/click.png" width="80" class="box1">
     <span class="text_box1">Автокликер</span>
     <br>
@@ -82,17 +82,14 @@
     </div>
 </div>
 
-
-
-
-<div class="box_2" id="box2">
+<div class="up_2" id="up2">
     <img src="/static/images/rocket.png" width="80" class="box2">
     <span class="text_box2">Ракета</span>
     <br>
     <span class="text_box22">Увеличивает количество <br>получаемых монет на 1 минуту </span>
     <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">1000</span>
+        <span class="coin_text">10000</span>
     </div>
 </div>
 
@@ -107,14 +104,14 @@
 </div>
 </div>
 
-<div class="box_3" id="box3">
-    <img src="/static/images/box_3.png" width="80" class="box3">
-    <span class="text_box3">Ящик Пандоры</span>
+<div class="up_3" id="up3">
+    <img src="/static/images/energy_regen.png" width="80" class="box3">
+    <span class="text_box3">Энергия</span>
     <br>
-    <span class="text_box33"> Древний таинственный сундук</span>
+    <span class="text_box33"> Сверхбыстрая регенерация на 1ч</span>
     <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">1000</span>
+        <span class="coin_text">20000</span>
     </div>
 </div>
 
@@ -129,25 +126,19 @@
 </div>
 
 
-<div class="box_4" id="box4">
-    <img src="/static/images/box_4.png" width="80" class="box4">
-    <span class="text_box4">Сундук Бездны</span>
-    <br>
-    <span class="text_box44">Самый редкий сундук <br> во вселенной</span>
-    <div class="coin_container">
-        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">1000</span>
-    </div>
+<div class = 'up_text2'>
+<p>Второй мир</p>
 </div>
 
-<!-- Скрытое меню для четвертого ящика -->
-<div class="menu" id="menu4" style="display: none;">
-    <img src="/static/images/box_4.png" alt="Ящик" class="menu_box_image">
-    <div class="coin_display">
-        <span class="coin_text">1000</span>
+<div class="up_4" id="up4">
+    <img src="/static/images/energy_lighty.png" width="80" class="box3">
+    <span class="text_box3">Энергия света</span>
+    <br>
+    <span class="text_box33">Автокликер на 6ч</span>
+    <div class="coin_container">
         <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
+        <span class="coin_text">0</span>
     </div>
-    <button id="buyButton4" class="buy_button">Купить</button>
 </div>
 
 
